# RampBot

./: .clang-format  README.md
client/: .gitignore  platformio.ini
client/lib/: Encoder.cpp  Encoder.hpp  Motor.hpp  constants.h
client/src/: All_Movements.cpp  All_Movements.hpp  Angle.hpp  DemoInterface.cpp  DemoInterface.hpp  Golay.cpp  Golay.h  IMU.cpp  IMU.hpp  InterruptDisable.cpp  InterruptDisable.h  MPU9250.cpp  MPU9250.hpp  Motor.cpp  Motor.hpp  Movement.hpp  Robot.cpp  Robot.hpp  TempSense.cpp  TempSense.h  UltraSonic.cpp  UltraSonic.hpp  constants.h  main.cpp  packet_externs.cpp  quaternionFilters.cpp  quaternionFilters.hpp  state_machine.cpp  state_machine.hpp  types.h  ultraSonicSwivel.cpp  ultraSonicSwivel.h
client/test/: IMU.cpp  IMU.hpp  constants.h  main.cpp
client/test_ultrasonic/: UltraSonic.cpp  UltraSonic.h  main.cpp
host/: .gitignore  CMakeLists.txt
host/src/: AsyncSerial.cpp  AsyncSerial.h  BufferedAsyncSerial.cpp  BufferedAsyncSerial.h  Golay.cpp  Golay.h  PacketHandler.cpp  PacketHandler.h  main.cpp  microcontroller.cpp  microcontroller.h  robot.cpp  robot.h
plotting/: Setupmatrices.m  serial_plotting.py
share/packet/: CMakeLists.txt
share/packet/packet_definitions/: config_packet.cpp  config_packet.h  packet_defs.h  sensor_packet.cpp  sensor_packet.h  time_packet.cpp  time_packet.h
share/packet/packet_handling/: packet.cpp  packet.h  packet_data.h  packet_errors.h  packet_externs.h  packet_header.cpp  packet_header.h  packet_utils.h
